telepathy: Don't leak local GError after showing it

There are 2 occurrences in the telepathy backend where a local error is
shown if it's set, but then it's never freed, which causes a memory
leak.

https://bugzilla.gnome.org/show_bug.cgi?id=756759